# COM2_Project_XGES

./: CMakeLists.txt  README.md  README_BENCHMARK.md  data_generation.py  generate_data_and_ground_truth.py  run_benchmark.sh
ground_truth/: True_DAG_var20_avg_deg3.0.csv  True_DAG_var400.csv
samples/: Data_var200_samples600.npy  Data_var20_avg_deg3.0_n_samples1000.npy
src-cpp/: BICScorer.cpp  BICScorerGPU.cu  BICScorerGPU_Optimized.cu  BICScorerGPU_cuBLAS.cu  CMakeLists.txt  CircularBuffer.h  EdgeQueueSet.cpp  EdgeQueueSet.h  Operators.cpp  Operators.h  PDAG.cpp  PDAG.h  ScorerInterface.h  XGES.cpp  XGES.h  XGESBatched.cpp  XGESBatched.h  main.cpp  set_ops.cpp  set_ops.h  utils.h
